@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.9</version>
+    <version>2.17</version>
   </parent>
 
   <artifactId>ws-cleanup</artifactId>
@@ -20,10 +20,6 @@
   </properties>
 
   <developers>
-    <developer>
-      <id>vjuranek</id>
-      <name>Vojtech Juranek</name>
-    </developer>
     <developer>
       <id>olivergondza</id>
       <name>Oliver Gondža</name>
@@ -56,12 +52,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jenkins-ci</groupId>
-      <artifactId>test-annotations</artifactId>
-      <version>1.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-job</artifactId>
       <version>${workflow.version}</version>
@@ -91,6 +81,22 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <executions>
+          <execution>
+              <id>default-test</id>
+              <configuration>
+                <argLine>-XX:MaxPermSize=256m</argLine>
+              </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
   <repositories>
     <repository>
